# ITMO_MEGASCHOOL

./: README.md  base_agent.ipynb  pyproject.toml
data/: README.md
data/raw/: file5.pptx
